# easySQL

./: .gitignore  README.md  pyproject.toml
easysql/: __init__.py  connector.py  convertor.py  database.py  types.py
examples/: basic.py
