[project]
name = "easysql"
description = "An easy-to-use database wrapper for Python."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["sql", "easy"]
authors = [
    { name = "InvalidJoker" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "easysql.__version__"}

[project.urls]
GitHub = "https://github.com/InvalidJokerDE/easysql"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"